<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FtthServiceman</string>
    <string name="title_activity_map_result">NodeMaps</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainActivityTitle">Node Maps 1.0</string>
    <string name="startButtonLabel">start node maps</string>
    <string name="serverIpTextFieldHint">Insert server ip address here</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_closed">CLOSE</string>
    <string name="insert_address">Wprowadź adre</string>
    <string name="search_address">Szukaj</string>
    <string name="error_invalid_password">Hasło nie może być puste</string>
    <string name="error_field_required">Pole użytkownik nie może być puste</string>
    <string name="prompt_username">Wprowadź nazwę użytkownika</string>
    <string name="prompt_password">Wprowadź hasło</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="settingsTitle">Ustawienia</string>
    <string name="insertServerAddress">Wprowadź adres serwera</string>
    <string name="insert_address_to_find">Wprowadź adres</string>
    <string name="example_address">Ulica, Miasto</string>
    <string name="prompt_address_to_find">Ulica, Miasto</string>
    <string name="action_find_address">Wyszukaj</string>
    <string name="admin_menu_header">Menu</string>
    <string name="ftth_jobs_list_header">Lista zleceń</string>
    <string name="add_ftth_job">Dodaj zlecenie</string>
    <string name="latitude">Szerokość geograficzna:</string>
    <string name="longitude">Długość geograficzna:</string>
    <string name="prompt_ftth_job_description">Wprowadź opis zlecenia</string>
    <string name="find_way_ftth_job">Wzynacz trasę do miejsca zlecenia</string>
    <string name="ftth_job_description">Opis zlecenia:</string>
    <string name="update_ftth_job">Zmień status</string>
    <string name="ftth_job_status">Status zlecenia:</string>
    <string name="action_search">Wysukaj adres</string>
    <string name="search_address_hint">Wprowadź adres(Ulica, Miasto)</string>
    <string name="show_signal_path">Pokaż ścieżkę sygnału</string>

    <array name="mapResutAdminDrawerListItem">
        <item>Wyszukaj adres</item>
    </array>
</resources>
